--- a/app/globals.css
+++ b/app/globals.css
@@ -200,3 +200,8 @@ body {
 .slide-over-scroll::-webkit-scrollbar-thumb:hover {
   background-color: #D1D5DB;
 }
+
+/* body lock 클래스 */
+.lock {
+  overflow: hidden;
+}
